--- a/additionaldetails.html
+++ b/additionaldetails.html
@@ -389,16 +389,16 @@
                 <input id="profile_img" name="profile_img" type="file" />
                 <label for="phone">Enter your phone number:</label>
 
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" >
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" >
                 <label for="desc">Description about yourself:</label>
                 <input type="text" id="desc" name="desc"/>
                 <!-- <label>Remember me</label> -->
 
                 <!-- kahin pr kuch comment ka error hai -->
 
-                <a href="signup.html">Sign up here</a>
+               
 
-                <button type="submit" class="signupbtn" value="Sign In" id="sign-in">Sign In</button>
+                <button type="submit" class="signupbtn" value="Sign In" id="additional">Sign In</button>
 
             </form>
             <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -437,6 +437,7 @@
         </div>
     </div>
     <script type="text/javascript" src="./scripts/uploadImage.js"></script>
+    <script type="text/javascript" src="./scripts/additionalinfo.js"></script>
 </body>
 
 
