--- a/foreword.html
+++ b/foreword.html
@@ -45,11 +45,11 @@
     }
 
     .logo {
-      flex: 0.3;
+      flex: 2;
     }
 
     .nav-links {
-      flex: 3;
+      flex: 7;
     }
 
     .navbar a {
@@ -248,8 +248,8 @@
 
 <body>
   <div class="navbar">
-    <div class="logo">
-      VITOLX
+     <div class="logo">
+     <img src="./vit-olx-logo.png" style="height:5vh; width:5vw;">
     </div>
     <div class="nav-links">
       <a href="home.html">Home</a>
