--- a/home.html
+++ b/home.html
@@ -425,6 +425,8 @@ margin-bottom:-0.85%; padding: 0.5%">
         <p>Monday: 9am to 5pm</p>
         <p>Saturday: 10am to 6pm</p>
         <p>Sunday closed</p>
+        <p>Made with ♥️ for CSE3002</p>
+
       </div>
       <div class="col-md-4">
         <hr class="light">
