--- a/login.html
+++ b/login.html
@@ -306,8 +306,8 @@
 
 <body>
   <div class="navbar">
-    <div class="logo">
-      VITOLX
+     <div class="logo">
+     <img src="./vit-olx-logo.png" style="height:5vh; width:5vw;">
     </div>
     <div class="nav-links">
       <a href="home.html">Home</a>
@@ -395,7 +395,7 @@
 </div>
 
 
-  <div class="container-fluid padding">
+  <div class="container-fluid padding" style="position:sticky; margin-top: 570px;">
     <div class="row text-center">
       <div class="col-md-4">
         
@@ -405,7 +405,7 @@
          width=80" height="30">
       </a>
         <p>999-999-9999</p>
-        <p>email@gmail.com</p>
+        <p>shounak2922k@gmail.com</p>
         <p>Dtreet name</p>
         <p>City, State, 00000</p>
       </div>
