--- a/map.html
+++ b/map.html
@@ -241,11 +241,11 @@
   </style>
 </head>
 <body>
-<div class="navbar">
-    <div class="logo">
-      VITOLX
+ <span class="navbar">
+      <div class="logo">
+     <img src="./vit-olx-logo.png" style="height:5vh; width:5vw;">
     </div>
-    <div class="nav-links">
+
       <a href="home.html">Home</a>
       <a href="foreword.html">Foreword</a>
       <a href="product.html">Product list</a>
@@ -255,8 +255,20 @@
       <a href="us.html">About Us</a>
       <a href="#contact-us">Contact Us</a>
       <a href="login.html">Sign in</a>
+ 
+  <!--  <div class="dropdown">
+      <button class="dropbtn">What-else?
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content-for-values">
+        <a href="us.html">About us</a>
+        <a href="#">Collaborations</a>
+        <a href="#">Link 3</a>
+      </div>
     </div>
-  </div>
+  -->
+  </span>
+
      <center><div class="container">
     <div class="card">
       <h1 class="name" id="name"></h1>
