--- a/praccc.html
+++ b/praccc.html
@@ -206,7 +206,7 @@
   .contact-us
   {
   width: 100vw;
-  height: 120vh;
+  height: 90vh;
     background: white;
     padding: 10px 10px;
     border-top: 10px solid  #2e2eb8;
@@ -306,8 +306,8 @@
 
 <body>
   <div class="navbar">
-    <div class="logo">
-      VITOLX
+     <div class="logo">
+     <img src="./vit-olx-logo.png" style="height:5vh; width:5vw;">
     </div>
     <div class="nav-links">
       <a href="home.html">Home</a>
@@ -370,16 +370,16 @@
     </a>
   </div> -->
 <div class="form-final">
-<div style="width:30vw; float:left; transform: translateY(10%);">
-  <img src="undraw_pay_online_b1hk.svg">
+<div style="width:30vw; height:90vh;float:left; transform: translateY(10%);">
+  <img src="undraw_pay_online_b1hk.svg" style="height:80vh;">
 </div>
   <div class="contact-us" style="width:35%; float: right;">
         <h1 style="text-align:center; color: #6C63FF;">UPLOAD ITEM</h1>
-        <form action="#">
+        <form>
           <label for="customerName">NAME <em>&#x2a;</em></label>
           <input id="customerName" name="customerName" required="" type="text" />
           <label for="description">description <em>&#x2a;</em></label>
-          <input id="description" name="customerEmail" required type="text" />
+          <input id="description" name="description" required type="text" />
           <label for="tags">TAGS</label>
           <input id="tags" name="TAGS" required type="tags" />
           <label for="desc">long Description</label>
@@ -392,8 +392,8 @@
       </div>
 </div>
 
-</body>
-  <div class="container-fluid padding">
+
+ <div class="container-fluid padding" style="position:sticky; margin-top: 670px;">
     <div class="row text-center">
       <div class="col-md-4">
         
@@ -426,7 +426,6 @@
       </div>
     </div>
   </div>
-
- <script type="text/javascript" src="./scripts/addItem.js"></script>
-
+  <script type="text/javascript" src="./scripts/additem.js"></script>
+</body>
 </html>
