--- a/signup.html
+++ b/signup.html
@@ -312,8 +312,8 @@
 
 <body>
   <div class="navbar">
-    <div class="logo">
-      VITOLX
+     <div class="logo">
+     <img src="./vit-olx-logo.png" style="height:5vh; width:5vw;">
     </div>
     <a href="home.html">Home</a>
       <a href="foreword.html">Foreword</a>
@@ -405,7 +405,7 @@
     </div>
   </div>
   </div>
- <div class="container-fluid padding">
+ <div class="container-fluid padding" style="position:sticky; margin-top: 770px;">
     <div class="row text-center">
       <div class="col-md-4">
         
